--- a/ios/run_tracker/Info.plist
+++ b/ios/run_tracker/Info.plist
@@ -71,6 +71,8 @@
 		<string>RobotoCondensed-Light.ttf</string>
 		<string>RobotoCondensed-LightItalic.ttf</string>
 		<string>RobotoCondensed-Regular.ttf</string>
+		<string>BebasNeue-Regular.ttf</string>
+		<string>BebasNeue.ttf</string>
 	</array>
 </dict>
 </plist>
