--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-ui-lib": "^7.2.4",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
