--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
