--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
