--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@types/react-native-sqlite-storage": "^6.0.0",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
