--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.7.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
